add_subdirectory(Application)
add_subdirectory(Buildings)
add_subdirectory(Components)
add_subdirectory(ComponentSystems)
add_subdirectory(Level)
add_subdirectory(Map)
add_subdirectory(Mobs)
add_subdirectory(Player)
add_subdirectory(Preferences)
add_subdirectory(Quests)
add_subdirectory(Researches)
add_subdirectory(States)
add_subdirectory(UI)