set(CURRENT_COMPONENT_NAME ECS)
set(CURRENT_COMPONENT ${COMPONENT_${CURRENT_COMPONENT_NAME}})
set(CURRENT_COMPONENT_INCLUDE_DIR ${COMPONENT_${CURRENT_COMPONENT_NAME}_INCLUDE_DIR})
set(CURRENT_COMPONENT_SOURCE_DIR ${COMPONENT_${CURRENT_COMPONENT_NAME}_SOURCE_DIR})

add_subdirectory(src)

if (BUILD_TESTING)
    add_subdirectory(tests)
endif()